ui 버그 수정 및 개선, Subscription 폼 검증방식 수정, 한글 가수명 검색 방식 변경